# bint

./: .gitignore  Cargo.toml  amiibo_functions.py  bin_modify_utils.py  characters.json  dicts.py  main.py  sections.json  spirits.json
assets/: characters.json
cogs/: base.py  bin.py  storage.py
src/: main.rs  utils.rs
src/amiibo_utils/: evaluate.rs  mod.rs  personality.rs  rename.rs  ryujinx.rs  shuffle.rs  spirits.rs  transplant.rs
