[package]
name = "bint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiibo = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
hex = "0.4.3"
indexmap = "1.9.1"
bitstream-io = "1.5.0"
lazy_static = "1.4.0"
utf16string = "0.2.0"
rand = "0.8.5"
base64 = "0.13.0"
chrono = "0.4"

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.11"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]